<resources>
    <string name="app_name">ExercicesAndroid</string>
    <string name="introExo">Bienvenue dans les exercices android-java</string>
    <string name="exo1">Exercice 1 : création première app android</string>
    <string name="deNum">Le dé numérique !</string>
    <string name="faces">Faces</string>
    <string name="lancer">Lancer</string>
    <string name="relancer">Relancer!</string>
    <string name="ok">OK</string>
    <string name="annuler">Annuler</string>
    <string name="titreNouveauDe">Nouveau dé!</string>
    <string name="messageNouveauDe">Entrez le nombre de face de votre nouveau lancé de dé :</string>
    <string name="titreEnguaulade">Que des chiffres !</string>
    <string name="messageEngueulade">Vous ne pouvez lancer un dé qui n\'a pas un NOMBRE de faces ! nonméditesdonc.</string>
    <string name="titreDeVide">Vide!</string>
    <string name="messageDeVide">Vous n\'avez pas rempli le champ</string>

    <string name="exo2">Exercice 2 : affichage de texte</string>
    <string name="titreArticle">Beatles Anthology Vol.1</string>
    <string name="sTitreArticle">Behind \n that \n locked \n door : \n beatles \n rarities</string>
    <string name="article">Dans un coffre-fort au cœur des studios Abbey Road à Londres - protégés par une porte banalisée, à triple verrouillage et alarmée par la police - se trouvent quelque chose comme 400 heures d\'enregistrements inédits des Beatles, à partir du 2 juin 1962 et se terminant par les toutes dernières pistes enregistrées pour l\'album <i> Let It Be </i>. Le meilleur des meilleurs a été publié par Apple Records sous la forme de la série Anthology en 3 volumes.
Pour plus d\'informations, consultez la Beatles Time Capsule sur www.rockument.com.
\n\n Ce volume commence par la première nouvelle chanson des Beatles, "Free as a Bird" (basé sur une démo de John Lennon, trouvée uniquement sur <i> The Lost Lennon Tapes Vol. 28 </i>, et couvre les tout premiers enregistrements historiques, les sorties des premiers albums et les enregistrements en direct des premiers concerts et des sessions de la radio BBC.
\n\n
<b> Les points forts incluent: </b>\n\n
<b> <i> Cry for a Shadow </i> </b> - Beaucoup de fanatiques des Beatles ont commencé la route de la sortie, comme moi, avec une première écoute de cette chanson. Initialement intitulé "Beatle Bop" et enregistré en une seule session qui a produit quatre chansons (les trois autres avec Tony Sheridan avec les Beatles comme groupe d\'accompagnement), "Cry for a Shadow" est un instrument écrit par Lennon et Harrison, ce qui en fait unique à ce jour. John Lennon joue de la guitare rythmique, George Harrison joue de la guitare solo, Paul McCartney joue de la basse et Pete Best joue de la batterie. Les sessions ont été produites par Bert Kaempfert à Hambourg, en Allemagne, lors de la deuxième visite des Beatles d\'avril à juillet 1961 pour jouer dans les clubs de la section Reeperbahn.
\n\n
<b> <i> My Bonnie </i> </b> et <b> <i> Ain\'t She Sweet </i> </b> - À la même session, les Beatles ont joué sur "My Bonnie" (le premier single jamais joué par les Beatles), en tant que groupe d\'accompagnement du chanteur anglais Tony Sheridan, à l\'origine membre des Jets. La popularité de ce single à Liverpool a attiré l\'attention des Beatles sur Brian Epstein, qui a travaillé dans le magasin de disques NEMS et a tenté de répondre à la demande pour le disque. John Lennon chante ensuite une belle chanson "Ain\’t She Sweet" (sa toute première voix sortie).
\n\n
<b><i>Searchin</i> </b> - Une chanson de comédie Jerry Leiber - Mike Stoller qui a été un succès pour les Coasters en 1957 et un favori populaire des Beatles. Les Coasters ont également eu un succès avec "Besame Mucho" et les Beatles ont également repris cette chanson. Ringo Starr avait désormais remplacé Pete Best à la batterie. Le fausset haut est George, qui joue également une guitare solo hésitante. Ceci est de leur première audition pour Decca Records à Londres le 1er janvier 1962, en direct dans le studio. The Grateful Dead couvrira plus tard "Searchin" avec un arrangement similaire, Pigpen faisant la voix de Paul. Une version live est disponible sur les records de sortie avec les Dead rejoint par les Beach Boys!\n\n<b> <i> Love Me Do </i> </b> - Une première version de la chanson, jouée un peu plus lentement et avec plus de blues, et un beat bossa-nova cool au milieu. Paul a dû chanter pendant que John jouait de l\'harmonica - une première pour le groupe. Pete Best a joué de la batterie sur cette version.
\n\n
<b> <i> She Loves You - Till There Was You - Twist and Shout </i> </b> - Live au Princess Wales Theatre de Leicester Square à Londres, en présence de la reine. "Till There Was You" (de Meredith Wilson) est tiré de la comédie musicale The Music Man et un hit pour Peggy Lee en 1961. Avant de le jouer, Paul a dit qu\'il avait été enregistré par son groupe américain préféré, "Sophie Tucker" (qui a obtenu des rires). À la fin, John dit aux gens sur les sièges les moins chers de taper dans leurs mains et aux autres de «faire vibrer vos bijoux», puis annonce «Twist and Shout» (une chanson de Bert Russell et Phil Medley qui a été enregistrée pour la première fois en 1962 par les Isley Brothers). Un film de la représentation montre la reine souriant à la remarque de John.
\n\n
<b> <i> Leave My Kitten Alone </i> </b> - Une des chansons perdues des Beatles enregistrées pendant les sessions "Beatles For Sale" mais jamais sorties. Cette chanson, écrite par Little Willie John, Titus Turner et James McDougal, était un hit R &amp; B de 1959 pour Little Willie John et reprise par Johnny Preston avant que les Beatles ne l\'essayent et ne la mettent de côté. Une référence à un «gros gros bouledogue» a peut-être influencé «Hey Bulldog» de John (album Yellow Submarine), qui est un rockeur similaire.
\n\n
<b> <i> One After 909 </i> </b> - Une chanson enregistrée pour l\'album <i> Let It Be </i> a en fait été reprise au début, six ans plus tôt. Cette prise montre comment ils l\'ont fait beaucoup plus lentement, avec une sensation R &amp; B.</string>
    <string name="exIm">Exemple - utilisation des images</string>
    <string name="desserts">Les Desserts du Café</string>
    <string name="donuts">Les Donuts sont fourrés et avec un joli glaçage</string>
    <string name="dwich">Les sandwiches à la crème glacée ont des gaufrettes au chocolat et une garniture à la vanille</string>
    <string name="froyo">Le FroYo est un YOGOURT glacé libre-service de première qualité</string>
    <string name="messageDonut">Vous avez commandé un Donut</string>
    <string name="messageDwich">Vous avez commandé une Glace</string>
    <string name="messageFroyo">Vous avez commandé un Froyo</string>
    <string name="titrePff">Bon, voilà</string>
    <string name="messagePff">t\'as appuyé sur un bouton t\'es content? Connard va</string>
    <string name="ExLv">Exemples listView - Comptes utilisateurs</string>
            <string name="prenom1">Prénom 1</string>
            <string name="prenom2">Prénom 2</string>
            <string name="page2">Page 2 des exercices / exemple sur Android</string>
            <string name="numerology">Exercice de numérologie (secte)</string>
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
</resources>